--- a/xbee_android_library/build.gradle
+++ b/xbee_android_library/build.gradle
@@ -40,9 +40,10 @@ android {
 }
 
 dependencies {
+    implementation fileTree(dir: 'libs', include: ['*.jar','*.aar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
     api 'com.digi.xbee:xbee-java-library:1.3.0'
-    implementation 'com.digi:android-sdk-addon:3'
+    //implementation 'com.digi:android-sdk-addon:3'
     testImplementation 'org.mockito:mockito-all:1.10.19'
     testImplementation 'org.powermock:powermock-module-junit4:1.6.6'
     testImplementation 'org.powermock:powermock-api-mockito:1.6.6'
