Refactored to handle multiple modules
Use a hashmap based on remote addresses to store data until its ready for processing.

Cleaned up remote dependencies and put in JARs for TPP building

--- a/build.gradle
+++ b/build.gradle
@@ -12,9 +12,9 @@ allprojects {
     repositories {
         google()
         mavenCentral()
-        maven {
-            url 'https://ftp1.digi.com/support/m-repo/'
-        }
+        //maven {
+        //    url 'https://ftp1.digi.com/support/m-repo/'
+        //}
     }
 }
 
