--- a/xbee_android_library/build.gradle
+++ b/xbee_android_library/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.library'
-//apply plugin: 'com.vanniktech.maven.publish'
 
 // Global library settings (used by all Gradle scripts)
 version = "1.0.0"
@@ -7,7 +6,7 @@ archivesBaseName = 'xbee-android-library'
 
 android {
     compileSdkVersion 33
-    buildToolsVersion "30.0.3"
+    //buildToolsVersion "30.0.3"
 
     defaultConfig {
         minSdkVersion 28
@@ -40,15 +39,22 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar','*.aar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    api 'com.digi.xbee:xbee-java-library:1.3.0'
+    implementation fileTree(dir: 'libs\\implementation', include: ['*.jar','*.aar'])
+    api fileTree(dir: 'libs\\api', include: ['*.jar','*.aar'])
+
+// https://mvnrepository.com/artifact/org.slf4j/slf4j-reload4j
+    testImplementation 'org.slf4j:slf4j-reload4j:2.0.16'
+
+// https://mvnrepository.com/artifact/org.slf4j/slf4j-android
+    implementation 'org.slf4j:slf4j-android:1.7.36'
+
+    //api 'com.digi.xbee:xbee-java-library:1.3.0'
     //implementation 'com.digi:android-sdk-addon:3'
+    /*
+    implementation 'com.android.support:appcompat-v7:28.0.0'
     testImplementation 'org.mockito:mockito-all:1.10.19'
     testImplementation 'org.powermock:powermock-module-junit4:1.6.6'
     testImplementation 'org.powermock:powermock-api-mockito:1.6.6'
     testImplementation 'junit:junit:4.12'
+    */
 }
-
-//apply from: 'javadoc.gradle'
-//apply from: 'publish.gradle'
